# rose-next-classic

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitlab-ci.yml  1-login.bat  2-world.bat  3-game.bat  README.md  bake.manifest  justfile  local.bat  pack.manifest  release-1-login.bat  release-2-world.bat  release-3-game.bat  release-local.bat  rose-next.sln  servers.sln  thirdparty.sln
src/: Cargo.toml  rose-next.props
src/.cargo/: config
src/client/: appmsgq.cpp  appmsgq.h  bullet.cpp  bullet.h  capplication.cpp  capplication.h  cavatarstate.cpp  cavatarstate.h  ccamera.cpp  ccamera.h  cclientstorage.cpp  cclientstorage.h  cdialog.h  cgameobj.cpp  cgameobj.h  charparteffect.cpp  charparteffect.h  cjustmodelavt.cpp  cjustmodelavt.h  client.rc  client.vcxproj  client.vcxproj.filters  clientdb.cpp  clientdb.h  cmodelchar.cpp  cmodelchar.h  cobjcart.cpp  cobjcart.h  cobjchar.cpp  cobjchar.h  cobjchar_actionframe.cpp  cobjchar_collision.cpp  cobjchar_collision.h  cobjfixed.cpp  cobjfixed.h  cobjground.cpp  cobjground.h  cobjmorph.cpp  cobjmorph.h  cobjuser.cpp  (+51 more)
src/client/ai_lib/: @cai_file.h  ai_action.cpp  ai_condition.cpp  cai_file.cpp  cai_file.h  cai_lib.h
src/client/common/: calculation.cpp  calculation.h  ceconomy.cpp  ceconomy.h  choticon.cpp  choticon.h  cinventory.cpp  citem.cpp  citem.h  cobjai.cpp  cobjai.h  cquest.cpp  cquest.h  cregenarea.cpp  cregenarea.h  cuserdata.cpp  cuserdata.h  datatype.h  io_ai.cpp  io_ai.h  io_motion.cpp  io_motion.h  io_pat.cpp  io_pat.h  io_quest.cpp  io_quest.h  io_skill.cpp  io_skill.h  io_stb.cpp  io_stb.h
src/client/event/: cevent.cpp  cevent.h  gf_effect.cpp  gf_item.cpp  gf_system.cpp  qf_conversation.cpp  qf_quest.cpp  qf_skill.cpp  quest_func.h  questrewardqueue.cpp  questrewardqueue.h
src/common/: calculation.cpp  calculation.h  cchatroom.cpp  cchatroom.h  cinventory.cpp  cinventory.h  citem.cpp  citem.h  cobjvar.h  common.filters  common.vcxproj  common.vcxproj.filters  cpartylist.cpp  cpartylist.h  csocketwnd.h  cthreadguild.cpp  cthreadguild.h  cthreadlog.cpp  cthreadlog.h  cthreadmsgr.cpp  cthreadmsgr.h  datatype.h  etc_math.cpp  etc_math.h  flatbuffers.targets  flatbuffers.xml  io_pat.cpp  io_pat.h  io_skill.cpp  io_skill.h  io_stb.cpp  net_prototype.h  srv_packet.h  srv_prototype.h
src/common-lib/: Cargo.toml  build.rs  cbindgen.toml
src/common-server/: blocklist.h  cacceptthread.cpp  cacceptthread.h  cdatapool.h  ciocpthread.cpp  ciocpthread.h  classindex.h  classiocp.h  classmysql.cpp  classmysql.h  classodbc.cpp  classodbc.h  classpacket.cpp  classpacket.h  classsql.h  common-server.vcxproj  common-server.vcxproj.filters  csqlthread.cpp  csqlthread.h  iocpsocket.cpp  iocpsocket.h  iocpsocketserver.cpp  iocpsocketserver.h  ip_addr.cpp
src/engine/: engine.vcxproj  engine.vcxproj.filters
src/launcher/: Cargo.toml  README.md
src/lib_server/: blocklist.cpp  blocklist.h  cacceptthread.cpp  cdatapool.h  ciocpserversocket.cpp  ciocpthread.cpp  classindex.h  classiocp.h  classodbc.cpp  classodbc.h  classpacket.cpp  classpacket.h  csqlthread.cpp  csqlthread.h  iocpsocket.cpp  iocpsocket.h  iocpsocketserver.cpp  iodatapool.cpp  iodatapool.h  ip_addr.cpp  ip_addr.h  lib_server.vcxproj  lib_server.vcxproj.filters
src/lib_util/: astream.cpp  astream.h  cbitarray.cpp  cbitarray.h  cclientsocket.cpp  cdllist.h  cdsound.cpp  cdsstream.cpp  cdsstream.h  cdxhpc.cpp  cdxhpc.h  classconsole.cpp  classconsole.h  classcrc.cpp  classhash.h  classini.h  classlog.cpp  classlua.cpp  classmd5.cpp  classmd5defines.h  classmem.cpp  classmem.h  classmp3.cpp  classmp3.h  classogg.cpp  classogg.h  classreg.h  classstb.cpp  classstb2.h  classstr.cpp  classsyncobj.cpp  classsyncobj.h  classthread.cpp  classthread.h  classtime.cpp  classtime.h  classutil.cpp  classwav.cpp  classwav.h  cmembuff.h  (+21 more)
src/pipeline/: Cargo.toml  README.md
src/sho_gameserver/: sho_gameserver.vcxproj  sho_gameserver.vcxproj.filters
src/sho_loginserver/: sho_loginserver.vcxproj  sho_loginserver.vcxproj.filters
src/sho_worldserver/: sho_worldserver.vcxproj  sho_worldserver.vcxproj.filters
src/tgamectrl/: tgamectrl.vcxproj
src/triggerinfo/: triggerinfo.vcxproj
src/triggervfs/: resource.h  resource1.h  triggervfs.vcxproj  triggervfs.vcxproj.filters
(+1194 files in other folders)
