[package]
name = "rose-common"
version = "0.1.0"
authors = ["Ralph Minderhoud <ralphminderhoud@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.8"

[dependencies]
chrono = "0.4"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
yansi = "0.5"
