[package]
name = "rose-common"
version = "0.1.0"
authors = ["Ralph Minderhoud <ralphminderhoud@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.12"
# Use custom flatc that supports "extra" args
flatc-rust = {version="0.1.4-alpha.0", git="https://github.com/rminderhoud/flatc-rust", branch="ralph/extra-args"}

[dependencies]
chrono = "0.4"
crossbeam = "0.7"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
yansi = "0.5"
