[package]
name = "pipeline"
version = "0.4.0"
authors = ["Ralph Minderhoud <ralphminderhoud@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
clap = "2.33"
csv = "1"
globset = "0.4"
roselib = {path = "../../thirdparty/rose-lib"}
serde = { version = "1", features = ["derive"] }
walkdir = "2"