[package]
name = "pipeline"
version = "0.5.0"
authors = ["Ralph Minderhoud <ralphminderhoud@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
clap = "2.33"
csv = "1"
globset = "0.4"
rose-conv = {git = "https://github.com/rminderhoud/rose-tools"}
roselib = {git = "https://github.com/rminderhoud/rose-tools"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
